--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
         "start": "node -r dotenv/config ./bin/www"
     },
     "dependencies": {
-        "angular-bootstrap-datetimepicker": "^1.1.3",
-        "angularjs-datepicker": "^2.1.7",
         "body-parser": "^1.19.0",
         "bootstrap": "^3.4.1",
         "connect-multiparty": "^2.0.0",
         "cookie-parser": "~1.3.3",
-        "debug": "~2.0.0",
+        "debug": "^4.1.1",
         "dotenv": "^8.2.0",
         "ejs": "~>2.5.5",
         "express": "^4.17.1",
@@ -21,7 +19,7 @@
         "jsonwebtoken": "^5.4.0",
         "latest-version": "^2.0.0",
         "moment": "^2.17.1",
-        "mongoose": "^4.7.2",
+        "mongoose": "^5.9.1",
         "morgan": "^1.9.1",
         "ng-file-upload": "^12.2.13",
         "nodemon": "^2.0.2",
